# projeto-preco-de-casas

./: pyproject.toml
src/: analise_casa.ipynb  consultas_agregacoes.py  df_analise.csv  df_limpo.csv  implementação.py  limpeza_padronizacao.py  machine_learning.py  modelo_previsao_casas.pkl  transformador_poly.pkl
src/casa/: analise_casa.ipynb  implementação.py
src/casa/data/: df.limpo  df_modelo.csv
src/casa/machine_learning/: deploy.py  machine_learning.py  modelo_polinomial.pkl
src/casa/preparacao_dados/: analise_estatistica.py  consultas_agregacoes.py  limpeza_padronizacao.py
